@@ -12,10 +12,8 @@ sub object_class { 'SL::DB::Pricegroup' }
 __PACKAGE__->make_manager_methods;
 
 sub _sort_spec {
-  return ( default => [ 'pricegroup', 1 ],
-           columns => { SIMPLE => 'ALL',
-                        map { ( $_ => "lower(pricegroup.${_})" ) } qw(pricegroup),
-                      });
+  return ( default => [ 'sortkey', 1 ],
+           columns => { SIMPLE => 'ALL' });
 }
 
 1;
