@@ -10,7 +10,9 @@ __PACKAGE__->meta->table('pricegroup');
 
 __PACKAGE__->meta->columns(
   id         => { type => 'integer', not_null => 1, sequence => 'id' },
+  obsolete   => { type => 'boolean', default => 'false' },
   pricegroup => { type => 'text', not_null => 1 },
+  sortkey    => { type => 'integer', not_null => 1 },
 );
 
 __PACKAGE__->meta->primary_key_columns([ 'id' ]);
