@@ -160,7 +160,6 @@ $self->{texts} = {
   'Add Letter'                  => 'Brief hinzufügen',
   'Add Part'                    => 'Ware erfassen',
   'Add Price Factor'            => 'Preisfaktor erfassen',
-  'Add Pricegroup'              => 'Preisgruppe erfassen',
   'Add Printer'                 => 'Drucker hinzufügen',
   'Add Project'                 => 'Projekt erfassen',
   'Add Purchase Delivery Order' => 'Lieferschein (Einkauf) erfassen',
@@ -202,6 +201,7 @@ $self->{texts} = {
   'Add part'                    => 'Artikel hinzufügen',
   'Add picture'                 => 'Bild hinzufügen',
   'Add picture to text block'   => 'Bild dem Textblock hinzufügen',
+  'Add pricegroup'              => 'Preisgruppe hinzufügen',
   'Add section'                 => 'Abschnitt hinzufügen',
   'Add sub function block'      => 'Unterfunktionsblock hinzufügen',
   'Add taxzone'                 => 'Steuerzone hinzufügen',
@@ -1055,7 +1055,6 @@ $self->{texts} = {
   'Edit Part'                   => 'Ware bearbeiten',
   'Edit Preferences for #1'     => 'Einstellungen von #1 bearbeiten',
   'Edit Price Factor'           => 'Preisfaktor bearbeiten',
-  'Edit Pricegroup'             => 'Preisgruppe bearbeiten',
   'Edit Printer'                => 'Drucker bearbeiten',
   'Edit Purchase Delivery Order' => 'Lieferschein (Einkauf) bearbeiten',
   'Edit Purchase Order'         => 'Lieferantenauftrag bearbeiten',
@@ -1093,6 +1092,7 @@ $self->{texts} = {
   'Edit picture'                => 'Bild bearbeiten',
   'Edit predefined text'        => 'Vordefinierten Textblock bearbeiten',
   'Edit price rule'             => 'Preisregel bearbeiten',
+  'Edit pricegroup'             => 'Preisgruppe bearbeiten',
   'Edit prices and discount (if not used, textfield is ONLY set readonly)' => 'Preise und Rabatt in Formularen frei anpassen (falls deaktiviert, wird allerdings NUR das textfield auf READONLY gesetzt / kann je nach Browserversion und technischen Fähigkeiten des Anwenders noch umgangen werden)',
   'Edit project'                => 'Projekt bearbeiten',
   'Edit project #1'             => 'Projekt #1 bearbeiten',
@@ -2139,9 +2139,6 @@ $self->{texts} = {
   'Price sources deactivated in this client' => 'Preisquellen die in diesem Mandanten deaktiviert sind',
   'Price type explanation'      => 'Preistyp Erklärung',
   'Pricegroup'                  => 'Preisgruppe',
-  'Pricegroup deleted!'         => 'Preisgruppe gelöscht!',
-  'Pricegroup missing!'         => 'Preisgruppe fehlt!',
-  'Pricegroup saved!'           => 'Preisgruppe gespeichert!',
   'Pricegroups'                 => 'Preisgruppen',
   'Prices'                      => 'Preise',
   'Print'                       => 'Drucken',
@@ -2957,6 +2954,11 @@ $self->{texts} = {
   'The price rule has been saved.' => 'Die Preisregel wurde gespeichert.',
   'The price rule is not a rule for discounts' => 'Die Preisregel ist keine Regel für Rabatte',
   'The price rule is not a rule for prices' => 'Die Preisregel ist keine Regel für Preise',
+  'The pricegroup has been created.' => 'Die Preisgruppe wurde erstellt.',
+  'The pricegroup has been deleted.' => 'Die Preisgruppe wurde gelöscht.',
+  'The pricegroup has been saved.' => 'Die Preisgruppe wurde gespeichert.',
+  'The pricegroup has been used and cannot be deleted.' => 'Die Preisgruppe wurde bereits verwendet und kann nicht gelöscht werden.',
+  'The pricegroup is being used by customers.' => 'Die Preisgruppe wird von Kunden verwendet.',
   'The printer could not be deleted.' => 'Der Drucker konnte nicht gelöscht werden.',
   'The printer has been created.' => 'Der Drucker wurde angelegt.',
   'The printer has been deleted.' => 'Der Drucker wurde entfernt.',
