@@ -1,41 +1,0 @@
-[%- USE L %]
-[%- USE T8 %]
-[%- USE HTML %]
-<h1>[% title %]</h1>
-[% L.javascript_tag('show_history.js') %]
-
-<form method=post action="[% script %]">
-
-<input type=hidden name=id value="[% id %]">
-<input type=hidden name=type value="[% type %]">
-
-<table width=100%>
-  <tr>
-    <td>
-      <table width=100%>
-        <tr>
-          <th align=right>[% 'Pricegroup' | $T8 %]</th>
-          <td><input name=pricegroup size=30 value="[% pricegroup | html %]"></td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-  <tr>
-    <td colspan=2><hr size=3 noshade></td>
-  </tr>
-</table>
-
-<br>
-
-<input name=callback type=hidden value="[% callback | html %]">
-<input type=submit class=submit name=action value="[% 'Save' | $T8 %]">
-[%- IF id && orphaned %]
-<input type=submit class=submit name=action value="[% 'Delete' | $T8 %]">
-[%- END %]
-
-[%- IF ( id ) %]
-  <input type=button onclick="set_history_window([% id %], 'id');" name=history id=history value="[% 'history' | $T8 %]">
-[%- END %]
-
-</form>
-
