@@ -1,35 +1,0 @@
-[%- USE HTML %]
-[%- USE T8 %]
-<h1>[% 'Pricegroup' | $T8 %]</h1>
-
-<table width=100%>
-  <tr>
-    <td>[% option %]</td>
-  </tr>
-  <tr>
-    <td>
-      <table width=100%>
-        <tr class=listheading>
-          <th class=listheading width=90%>[% 'Pricegroup' | $T8 %]</th>
-        </tr>
-[%- FOREACH row = item_list %]
-        <tr valign=top class="listrow[% loop.count % 2 %]">
-          <td><a href="[% editlink %]&id=[% row.id %]">[% row.pricegroup %]</a></td>
-        </tr>
-[%- END %]
-      </table>
-    </td>
-  </tr>
-  <tr>
-    <td><hr size=3 noshade></td>
-  </tr>
-</table>
-
-<br>
-<form method=post action="[% script %]">
-  <input name=callback type=hidden value="[% callback | html %]">
-  <input type=hidden name=type value="[% type %]">
-  <input class=submit type=submit name=action value="[% 'Add' | $T8 %]">
-</form>
-
-
